--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "DEBUG=node-express-typescript:* nodemon ./bin/www.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
